Fix issue with <global-menu-container> overlapping all links on the screen

--- a/src/less/nav.less
+++ b/src/less/nav.less
@@ -193,7 +193,7 @@
     }
 
     .tab {
-      
+
       a {
         text-decoration: none;
         padding: 10px;
@@ -243,6 +243,11 @@ global-menu-container {
   right: 0px;
   top: 101px;
   height: 100%;
+  display: flex;
+
+  &.hidden {
+    display: none;
+  }
 
   .dt-gnm-menu-root {
     height: 100%;
